[package]
name = "music-cli"
version = "0.1.0"
edition = "2021"
authors = ["Dmitry Shvetsov"]
description = "An installable command line application for managing the Apple Music app written in Rust."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
